--- a/berlin-reuse-19/index.html
+++ b/berlin-reuse-19/index.html
@@ -32,8 +32,8 @@
 </section>
 
 <section>
-<section id="slide-orgb2b95de">
-<h2 id="orgb2b95de"><span class="section-number-2">1</span> Summary</h2>
+<section id="slide-org897c6fb">
+<h2 id="org897c6fb"><span class="section-number-2">1</span> Summary</h2>
 <ul>
 <li>Motivation</li>
 <li>Case Study: Text Reuse in Bernard</li>
@@ -47,15 +47,15 @@
 </section>
 </section>
 <section>
-<section id="slide-orgf7bcf68">
-<h2 id="orgf7bcf68"><span class="section-number-2">2</span> Motivation</h2>
+<section id="slide-orge511ed6">
+<h2 id="orge511ed6"><span class="section-number-2">2</span> Motivation</h2>
 <div class="outline-text-2" id="text-2">
 </div>
 </section>
 </section>
 <section>
-<section id="slide-org12909c9">
-<h3 id="org12909c9">Intertextuality (Orr, Allen)</h3>
+<section id="slide-org5f318eb">
+<h3 id="org5f318eb">Intertextuality (Orr, Allen)</h3>
 <ul>
 <li class="fragment roll-in">Networked view: a web in which each text is embedded</li>
 <li class="fragment roll-in">Influential across schools and periods since Kristeva (60s)</li>
@@ -73,8 +73,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgee276ce">
-<h3 id="orgee276ce">Digital Literary Studies</h3>
+<section id="slide-org0ccc877">
+<h3 id="org0ccc877">Digital Literary Studies</h3>
 <ul>
 <li class="fragment roll-in">Intertextuality is practically intractable
 <ul>
@@ -89,8 +89,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgaeed220">
-<h3 id="orgaeed220">Text Reuse Detection</h3>
+<section id="slide-org6148268">
+<h3 id="org6148268">Text Reuse Detection</h3>
 <ul>
 <li class="fragment roll-in">Previous work:
 <ul>
@@ -112,8 +112,8 @@
 </section>
 </section>
 <section data-transition="none">
-<section id="slide-orgebba022" data-transition="none" data-background="#FFFFFF">
-<h2 id="orgebba022"><span class="section-number-2">3</span> Case Study: Bernard of Clairvaux (1090-1153)</h2>
+<section id="slide-orga2d9e21" data-transition="none" data-background="#FFFFFF">
+<h2 id="orga2d9e21"><span class="section-number-2">3</span> Case Study: Bernard of Clairvaux (1090-1153)</h2>
 
 <div class="figure">
 <p><img src="./images/brill.jpg" alt="brill.jpg" />
@@ -123,8 +123,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org8c20b88">
-<h3 id="org8c20b88">Personalia</h3>
+<section id="slide-orgaee8fa0">
+<h3 id="orgaee8fa0">Personalia</h3>
 <ul>
 <li class="fragment roll-in">Church Father from the 12th Century Renaissance</li>
 <li class="fragment roll-in">Controverse with Peter Abelard</li>
@@ -136,8 +136,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orga4cf6f8">
-<h3 id="orga4cf6f8">Written Production</h3>
+<section id="slide-org9149d54">
+<h3 id="org9149d54">Written Production</h3>
 <ul>
 <li class="fragment roll-in">Very eloquent and prolific writer (Doctor Mellifluus)</li>
 <li class="fragment roll-in">Mostly known for his numerous Sermons</li>
@@ -148,8 +148,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org944e170">
-<h2 id="org944e170"><span class="section-number-2">4</span> Dataset</h2>
+<section id="slide-org1c418c9">
+<h2 id="org1c418c9"><span class="section-number-2">4</span> Dataset</h2>
 <ul>
 <li class="fragment roll-in">BiblIndex (thanks to Laurence Mellerin): ongoing work on digital edition of Bernard</li>
 <li class="fragment roll-in">86 Sermones (<code>xml</code> following <code>TEI</code> guidelines; ± 165k tokens)</li>
@@ -164,8 +164,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgbeacf25">
-<h3 id="orgbeacf25">Dataset Statistics</h3>
+<section id="slide-org839bb3d">
+<h3 id="org839bb3d">Dataset Statistics</h3>
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -201,13 +201,13 @@
 </section>
 </section>
 <section>
-<section id="slide-org82fbcee">
-<h3 id="org82fbcee">Examples</h3>
-<div class="outline-text-3" id="text-org82fbcee">
+<section id="slide-orge9ea5a2">
+<h3 id="orge9ea5a2">Examples</h3>
+<div class="outline-text-3" id="text-orge9ea5a2">
 </div>
 </section>
-<section id="slide-org0f937c4">
-<h4 id="org0f937c4">Allusive Text Reuse Example 1</h4>
+<section id="slide-orgbbc18a0">
+<h4 id="orgbbc18a0">Allusive Text Reuse Example 1</h4>
 <ul>
 <li>Bernard (Sermo19.7.a) &ldquo;<b>parvulae</b> quippe in <b>Christo</b> sunt, lacte et oleo nutriendae&rdquo;</li>
 <li>Bible (Co.3.1) &ldquo;et ego fratres non potui vobis loqui quasi spiritalibus sed quasi carnalibus tamquam <b>parvulis</b> in <b>Christo</b>&rdquo;</li>
@@ -215,26 +215,26 @@
 </ul>
 
 </section>
-<section id="slide-org2456269">
-<h4 id="org2456269">Allusive Text Reuse Example 2</h4>
+<section id="slide-org1116fda">
+<h4 id="org1116fda">Allusive Text Reuse Example 2</h4>
 <ul>
-<li>Bernard (Sermo73.6.g) &ldquo;ne forte contingat iustum pro impio conculcari&rdquo;</li>
-<li>Bible (Jn.5.14) &ldquo;[&#x2026;] ecce sanus factus es iam noli peccare ne deterius tibi aliquid contingat&rdquo;</li>
+<li>Bernard (Sermo73.6.g) &ldquo;ne forte <b>contingat</b> iustum pro impio conculcari&rdquo;</li>
+<li>Bible (Jn.5.14) &ldquo;[&#x2026;] ecce sanus factus es iam noli peccare ne deterius tibi aliquid <b>contingat</b>&rdquo;</li>
 
 </ul>
 
 </section>
 </section>
 <section data-transition="none">
-<section id="slide-org4975b58" data-transition="none" data-background="#FFFFFF">
-<h3 id="org4975b58">Overlap</h3>
+<section id="slide-org3aec937" data-transition="none" data-background="#FFFFFF">
+<h3 id="org3aec937">Overlap</h3>
 <img src="./images/bernard-overlap.png" class="stretch"/>
 
 </section>
 </section>
 <section>
-<section id="slide-org3ee01dd" data-background="#FFFFFF">
-<h2 id="org3ee01dd"><span class="section-number-2">5</span> Text Reuse Detection (Information Retrieval Perspective)</h2>
+<section id="slide-orgbb4a816" data-background="#FFFFFF">
+<h2 id="orgbb4a816"><span class="section-number-2">5</span> Text Reuse Detection (Information Retrieval Perspective)</h2>
 
 <div class="figure">
 <p><img src="./images/IR.png" alt="IR.png" />
@@ -257,16 +257,16 @@
 </section>
 </section>
 <section>
-<section id="slide-org81fc039">
-<h2 id="org81fc039"><span class="section-number-2">6</span> How difficult is it for humans?</h2>
+<section id="slide-org298d9fb">
+<h2 id="org298d9fb"><span class="section-number-2">6</span> How difficult is it for humans?</h2>
 <span>Highly interpretative, debatable annotation process...</span>
 <span class="fragment roll-in">but how can we model the degree of interpretability?</span>
 
 </section>
 </section>
 <section>
-<section id="slide-org63be5d2">
-<h3 id="org63be5d2">Inter-annotator Agreement Experiment</h3>
+<section id="slide-org70503b3">
+<h3 id="org70503b3">Inter-annotator Agreement Experiment</h3>
 <ul>
 <li class="fragment roll-in">Inter-annotator agreement coefficients
 <ul>
@@ -279,17 +279,17 @@
 </ul>
 
 </section>
-<section id="slide-orgfe36abb" data-transition="none" data-background="#282A36">
-<h4 id="orgfe36abb"></h4>
+<section id="slide-orge81a537" data-transition="none" data-background="#282A36">
+<h4 id="orge81a537"></h4>
 <img src="./images/sample.png" class="stretch"/>
 
 </section>
-<section id="slide-orgaec8f36" data-transition="none" data-background="images/tool.gif">
-<h4 id="orgaec8f36"></h4>
+<section id="slide-orge5c336e" data-transition="none" data-background="images/tool.gif">
+<h4 id="orge5c336e"></h4>
 
 </section>
-<section id="slide-org1064708">
-<h4 id="org1064708">Experimental Conditions</h4>
+<section id="slide-org972413b">
+<h4 id="org972413b">Experimental Conditions</h4>
 <ul>
 <li class="fragment roll-in">Guideline: &ldquo;<b>Minimum span</b> that is <b>maximally allusive</b>&rdquo;</li>
 <li class="fragment roll-in">Restrictions
@@ -306,8 +306,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orgc6468bd">
-<h3 id="orgc6468bd">Agreement as overlap</h3>
+<section id="slide-orgdaa20af">
+<h3 id="orgdaa20af">Agreement as overlap</h3>
 <ul>
 <li class="fragment roll-in">Agreement: tokens shared with the other annotator
 <ul>
@@ -330,8 +330,8 @@
 </section>
 </section>
 <section data-transition="none">
-<section id="slide-org112f189" data-transition="none" data-background="#FFFFFF">
-<h3 id="org112f189">Results</h3>
+<section id="slide-org2422cef" data-transition="none" data-background="#FFFFFF">
+<h3 id="org2422cef">Results</h3>
 <aside class="notes">
 <ul>
 <li>2 modes</li>
@@ -347,8 +347,8 @@
 </section>
 </section>
 <section>
-<section id="slide-org850857d">
-<h2 id="org850857d"><span class="section-number-2">7</span> How difficult is it computationally?</h2>
+<section id="slide-orgf1a2d75">
+<h2 id="orgf1a2d75"><span class="section-number-2">7</span> How difficult is it computationally?</h2>
 <p>
 Text Reuse Detection from an Information Retrieval Perspective
 </p>
@@ -362,16 +362,16 @@ Text Reuse Detection from an Information Retrieval Perspective
 
 
 </section>
-<section id="slide-org962840b">
-<h4 id="org962840b">Evaluation</h4>
+<section id="slide-org39f1e5f">
+<h4 id="org39f1e5f">Evaluation</h4>
 <ul>
 <li>Accuracy@20</li>
 
 </ul>
 
 </section>
-<section id="slide-org49901ab">
-<h4 id="org49901ab">Warning!</h4>
+<section id="slide-org43a3784">
+<h4 id="org43a3784">Warning!</h4>
 <ul>
 <li>Interpretation of results must be aware of the artificiality of the task</li>
 <li>Modeling the conditional probability of retrieving a link <b>given a link</b></li>
@@ -382,8 +382,8 @@ Text Reuse Detection from an Information Retrieval Perspective
 </section>
 </section>
 <section data-transition="none">
-<section id="slide-org253a12c" data-transition="none" data-background="#FFFFFF">
-<h3 id="org253a12c">Document Representation Methods</h3>
+<section id="slide-org7934ed9" data-transition="none" data-background="#FFFFFF">
+<h3 id="org7934ed9">Document Representation Methods</h3>
 
 <div class="figure">
 <p><img src="./images/vector_space.png" alt="vector_space.png" />
@@ -391,8 +391,8 @@ Text Reuse Detection from an Information Retrieval Perspective
 </div>
 
 </section>
-<section id="slide-orga22d612">
-<h4 id="orga22d612">Purely Lexical</h4>
+<section id="slide-orgc3eff13">
+<h4 id="orgc3eff13">Purely Lexical</h4>
 <p>
 Cosine Distance on count-based <code>BoW</code> (± <code>tf-idf</code>):
 </p>
@@ -403,8 +403,8 @@ Cosine Distance on count-based <code>BoW</code> (± <code>tf-idf</code>):
 </ul>
 
 </section>
-<section id="slide-orgccba80b">
-<h4 id="orgccba80b">Purely distributional</h4>
+<section id="slide-org35f640e">
+<h4 id="org35f640e">Purely distributional</h4>
 <p>
 Cosine Distance on embedding based <code>BoW</code> embeddings (± <code>tf-idf</code>)
 </p>
@@ -419,15 +419,15 @@ Cosine Distance on embedding based <code>BoW</code> embeddings (± <code>tf-idf<
 </p>
 
 </section>
-<section id="slide-org888eefd">
-<h4 id="org888eefd">Hybrid (Soft-cosine)</h4>
+<section id="slide-org627f6f7">
+<h4 id="org627f6f7">Hybrid (Soft-cosine)</h4>
 <p>
 A generalization of cosine that allows for the incorporation of semantic similarity in the computation
 </p>
 
 </section>
-<section id="slide-org330ab8e" data-background="#FFFFFF">
-<h4 id="org330ab8e">Soft-cosine</h4>
+<section id="slide-org25dd41b" data-background="#FFFFFF">
+<h4 id="org25dd41b">Soft-cosine</h4>
 
 <div class="figure">
 <p><img src="./images/soft_cosine_tutorial.png" alt="soft_cosine_tutorial.png" />
@@ -435,8 +435,8 @@ A generalization of cosine that allows for the incorporation of semantic similar
 </div>
 
 </section>
-<section id="slide-org3e664a3">
-<h4 id="org3e664a3">Soft-cosine: Formulation</h4>
+<section id="slide-org5d0980a">
+<h4 id="org5d0980a">Soft-cosine: Formulation</h4>
 <p>
 Removes the assumption that every feature is completely dissimilar to any other feature
 </p>
@@ -448,8 +448,8 @@ Removes the assumption that every feature is completely dissimilar to any other 
 </ul>
 
 </section>
-<section id="slide-orgd20b613">
-<h4 id="orgd20b613">Soft-cosine: How to estimate S?</h4>
+<section id="slide-org1b941f8">
+<h4 id="org1b941f8">Soft-cosine: How to estimate S?</h4>
 <ul>
 <li>\(SC_{emb}\); \(S_{i,j} = cos(W_i,W_j)\)</li>
 <li>\(SC_{wn}\); \(S_{i,j} = \frac{1}{|T_i \cap T_j|}\)</li>
@@ -459,8 +459,8 @@ Removes the assumption that every feature is completely dissimilar to any other 
 </section>
 </section>
 <section>
-<section id="slide-orgb2919d2" data-background="#FFFFFF">
-<h3 id="orgb2919d2">Results</h3>
+<section id="slide-org9759b7a" data-background="#FFFFFF">
+<h3 id="org9759b7a">Results</h3>
 
 <div class="figure">
 <p><img src="./images/results.png" alt="results.png" />
@@ -469,8 +469,8 @@ Removes the assumption that every feature is completely dissimilar to any other 
 
 
 </section>
-<section id="slide-orgf3b6902" data-background="#FFFFFF">
-<h4 id="orgf3b6902">How important is manual query construction?</h4>
+<section id="slide-org0fe0ee9" data-background="#FFFFFF">
+<h4 id="org0fe0ee9">How important is manual query construction?</h4>
 
 <div class="figure">
 <p><img src="./images/results_window.png" alt="results_window.png" />
@@ -478,15 +478,15 @@ Removes the assumption that every feature is completely dissimilar to any other 
 </div>
 
 </section>
-<section id="slide-org10fd40c">
-<h4 id="org10fd40c">How important is the word embedding space?</h4>
+<section id="slide-org8c58c83">
+<h4 id="org8c58c83">How important is the word embedding space?</h4>
 <p>
 All spaces trained on a dataset by <a href="http://www.cs.cmu.edu/dbamman/latin.html">D. Bamman</a> (8.5 GB OCR&rsquo;d latin)
 </p>
 
 </section>
-<section id="slide-org3581f0f" data-background="#FFFFFF">
-<h4 id="org3581f0f"></h4>
+<section id="slide-org7a62873" data-background="#FFFFFF">
+<h4 id="org7a62873"></h4>
 
 <div class="figure">
 <p><img src="./images/results_emb.png" alt="results_emb.png" />
@@ -495,15 +495,15 @@ All spaces trained on a dataset by <a href="http://www.cs.cmu.edu/dbamman/latin.
 
 
 </section>
-<section id="slide-org8732132">
-<h4 id="org8732132">How does semantic information help (visualization)</h4>
+<section id="slide-org01b1f86">
+<h4 id="org01b1f86">How does semantic information help (visualization)</h4>
 <p>
 Compute the relative contribution of each word to the total similarity score    
 </p>
 
 </section>
-<section id="slide-org2f3d619" data-background="#FFFFFF">
-<h4 id="org2f3d619"></h4>
+<section id="slide-org3928827" data-background="#FFFFFF">
+<h4 id="org3928827"></h4>
 
 <div class="figure">
 <p><img src="./images/visibilis2.png" alt="visibilis2.png" />
@@ -512,8 +512,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-org2b3a8cb" data-background="#FFFFFF">
-<h4 id="org2b3a8cb"></h4>
+<section id="slide-org1f15664" data-background="#FFFFFF">
+<h4 id="org1f15664"></h4>
 
 <div class="figure">
 <p><img src="./images/botrum2.png" alt="botrum2.png" />
@@ -522,8 +522,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-org16af19d" data-background="#FFFFFF">
-<h4 id="org16af19d"></h4>
+<section id="slide-org59fda1e" data-background="#FFFFFF">
+<h4 id="org59fda1e"></h4>
 
 <div class="figure">
 <p><img src="./images/descendem2.png" alt="descendem2.png" />
@@ -532,8 +532,8 @@ Compute the relative contribution of each word to the total similarity score
 
 
 </section>
-<section id="slide-orgcefb64b" data-background="#FFFFFF">
-<h4 id="orgcefb64b"></h4>
+<section id="slide-org6bcd09f" data-background="#FFFFFF">
+<h4 id="org6bcd09f"></h4>
 
 <div class="figure">
 <p><img src="./images/intellexerint2.png" alt="intellexerint2.png" />
@@ -543,8 +543,8 @@ Compute the relative contribution of each word to the total similarity score
 </section>
 </section>
 <section>
-<section id="slide-orge70f810">
-<h2 id="orge70f810"><span class="section-number-2">8</span> Conclusions</h2>
+<section id="slide-orgdab483d">
+<h2 id="orgdab483d"><span class="section-number-2">8</span> Conclusions</h2>
 <ul>
 <li class="fragment roll-in">Difficulty
 <ul>
